// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows custom classes 1`] = `
.c0.c0.c0 {
  background-color: transparent !important;
  color: !important;
  border-color: !important;
  font-size: 1.0714285714285714rem !important;
  padding-right: 1.7142857142857142rem !important;
  padding-left: 1.7142857142857142rem !important;
  min-width: 0 !important;
  padding: 0.5714285714285714rem 1rem !important;
  border-radius: 1.1428571428571428rem !important;
  border-width: 0.07142857142857142rem !important;
  white-space: normal !important;
  line-height: 1.3 !important;
  height: auto !important;
}

.c0.c0.c0:not([disabled]):hover,
.c0.c0.c0:not([disabled]):active,
.c0.c0.c0:not([disabled]):focus {
  color: !important;
  background-color: !important;
  border-color: !important;
}

<div>
  <button
    class="blah c0 index__c-btn___3y2Qe "
    data-garden-container-id="keyboardfocus"
    data-garden-container-version="0.2.6"
    data-garden-id="buttons.button"
    data-garden-version="7.0.2"
    data-testid="pill-button"
    tabindex="0"
    type="button"
  >
    custom class
  </button>
</div>
`;

exports[`renders the expected classes 1`] = `
.c0.c0.c0 {
  background-color: transparent !important;
  color: !important;
  border-color: !important;
  font-size: 1.0714285714285714rem !important;
  padding-right: 1.7142857142857142rem !important;
  padding-left: 1.7142857142857142rem !important;
  min-width: 0 !important;
  padding: 0.5714285714285714rem 1rem !important;
  border-radius: 1.1428571428571428rem !important;
  border-width: 0.07142857142857142rem !important;
  white-space: normal !important;
  line-height: 1.3 !important;
  height: auto !important;
}

.c0.c0.c0:not([disabled]):hover,
.c0.c0.c0:not([disabled]):active,
.c0.c0.c0:not([disabled]):focus {
  color: !important;
  background-color: !important;
  border-color: !important;
}

<div>
  <button
    class="c0 index__c-btn___3y2Qe "
    data-garden-container-id="keyboardfocus"
    data-garden-container-version="0.2.6"
    data-garden-id="buttons.button"
    data-garden-version="7.0.2"
    data-testid="pill-button"
    tabindex="0"
    type="button"
  >
    hello world
  </button>
</div>
`;
